Add Endurance and Vehicle Info Panel code

--- a/gtkWorkspace/Makefile
+++ b/gtkWorkspace/Makefile
@@ -19,8 +19,8 @@ OUT = $(OUT_DIR)/driver-display.out
 .PHONY: all rebuild clean
 
 # New rules
-driver-display: $(OUT_DIR)/main.o $(OUT_DIR)/debug_panel.o $(OUT_DIR)/endurance_panel.o $(OUT_DIR)/parameters_panel.o $(OUT_DIR)/sre_logic.o $(OUT_DIR)/sre_can.o
-	$(CC) $(OUT_DIR)/main.o $(OUT_DIR)/debug_panel.o $(OUT_DIR)/endurance_panel.o $(OUT_DIR)/parameters_panel.o $(OUT_DIR)/sre_logic.o $(OUT_DIR)/sre_can.o $(LDFLAGS) -o $(OUT)
+driver-display: $(OUT_DIR)/main.o $(OUT_DIR)/debug_panel.o $(OUT_DIR)/endurance_panel.o $(OUT_DIR)/parameters_panel.o $(OUT_DIR)/sre_logic.o $(OUT_DIR)/sre_can.o $(OUT_DIR)/vehicleinfo_panel.o
+	$(CC) $(OUT_DIR)/main.o $(OUT_DIR)/debug_panel.o $(OUT_DIR)/endurance_panel.o $(OUT_DIR)/parameters_panel.o $(OUT_DIR)/sre_logic.o $(OUT_DIR)/sre_can.o $(OUT_DIR)/vehicleinfo_panel.o $(LDFLAGS) -o $(OUT)
 
 $(OUT_DIR)/main.o: main.c
 	$(CC) $(CFLAGS) -c main.c -o $(OUT_DIR)/main.o
@@ -40,6 +40,8 @@ $(OUT_DIR)/sre_logic.o: sre_logic.c
 $(OUT_DIR)/sre_can.o: sre_can.c
 	$(CC) $(CFLAGS) -c sre_can.c -o $(OUT_DIR)/sre_can.o
 
+$(OUT_DIR)/vehicleinfo_panel.o: vehicleinfo_panel.c
+	$(CC) $(CFLAGS) -c vehicleinfo_panel.c -o $(OUT_DIR)/vehicleinfo_panel.o
 
 all: rebuild
 
