Added new dbc_lib | worked on info Panels

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,16 +8,14 @@
   "files.insertFinalNewline": true,
   "[cpp]": {
     "editor.formatOnSave": true,
-    "editor.defaultFormatter": "zachflower.uncrustify"
   },
   "[c]": {
     "editor.formatOnSave": true,
-    "editor.defaultFormatter": "zachflower.uncrustify"
   },
-  "uncrustify.configPath.linux": ".vscode/uncrustify.cfg",
   "files.associations": {
     "sre_can.h": "c",
     "type_traits": "c",
     "sre_dbc.h": "c"
   },
+  "C_Cpp.default.compilerPath": "C:/msys64/ucrt64/bin/gcc.exe",
 }
